clusters/loudnova/apps/cloudnova-web/overlays/test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudnova-web-test
  namespace: cloudnova-web
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-infra
      sectionName: http

  hostnames:
    - test.cloudnova.tech
    - cloudnova.tech

  rules:
    - backendRefs:
        - name: cloudnova-web
          port: 80
