clusters/loudnova/apps/cloudnova-web/overlays/test/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudnova-web
  namespace: cloudnova-web
spec:
  template:
    metadata:
      labels:
        environment: test

    spec:
      containers:
        - name: cloudnova-web
          image: ghcr.io/sanketnawale/cloudnova-v2:sha-85a3e32
